--- a/templates/stadistics.html
+++ b/templates/stadistics.html
@@ -48,6 +48,15 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+                <form action="/" method="post">
+                    <div class="text-center">
+                        <input class="btn btn-primary" type="submit" value="Realizar otra planificación">
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
