--- a/templates/simulation.html
+++ b/templates/simulation.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col">
                 <h2 class="text-center">
-                    Procesos
+                    Planificación de procesos por prioridad apropiativo
                 </h2>
             </div>
         </div>
@@ -27,7 +27,21 @@
                     <input type="hidden" value='{{ tiempo }}' name="tiempo">
                     <input type="hidden" value='{{ grantt }}' name="grantt">
                     <input type="hidden" value='{{ total_CPU_time }}' name="total_CPU_time">
-                    <input class="btn btn-primary" type="submit" value="Siguiente [ {{ tiempo }} ]">
+                    <input type="hidden" value='{{ dead }}' name="dead">
+                    {%  if tiempo < total_CPU_time %}
+                    <div class="row">
+                        <div class="col">
+                            <div class="text-center">
+                                <input class="btn btn-primary" type="submit" value="Siguiente [ {{ tiempo }} ]">
+                            </div>
+                        </div>
+                    </div>
+                    {%  endif %}
+                    <div class="row">
+                        <div class="col">
+                            <br>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
@@ -60,7 +74,10 @@
                 <form action="/stadistics" , method="POST">
                     <input type="hidden" value='{{ table }}' name="table">
                     <input type="hidden" value='{{ grantt }}' name="grantt">
-                    <input class="btn btn-primary" type="submit" value="Ver estadísticas">
+                    <input type="hidden" value='{{ dead }}' name="dead">
+                    <div class="text-center">
+                        <input class="btn btn-primary" type="submit" value="Ver estadísticas">
+                    </div>
                 </form>
             </div>
         </div>
